--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,5 +8,29 @@
 	"Sign Up":"Sign Up",
 	"forgotpassword":"Forgot your password?",
 	"Register":"Register",
-	"forgotMyPassword":"Forgot my password"
+	"forgotMyPassword":"Forgot my password",
+	"Send":"Send",
+	"Message":"Message",
+	"Canvas in the room":"Canvasses in the room",
+	"room": "Room",
+	"The group": "The group",
+	"Users in": "Users",
+	"Rooms": "Rooms",
+	"Add User": "Add user",
+	"Create a New Room": "Create a New Room",
+	"Welcome":"Welcome",
+	"Username":"Username",
+	"Email":"Email",
+	"Create new group":"Create new group",
+	"Update Information":"Update Information",
+	"My Groups":"My Groups",
+	"Fill in the fields you would like to change":"Fill in the fields you would like to change",
+	"Insert your new username":"Insert your new username",
+	"Insert your new email":"Insert your new email",
+	"Insert your new password":"Insert your new password",
+	"Insert the URL of the new image":"Insert the URL of the new image",
+	"Insert the name of the new group":"Insert the name of the new group",
+	"Insert username of the user to add":"Insert username of the user to add",
+	"Will the user be an admin?":"Will the user be an admin?",
+	"Insert room name":"Insert room name"
 }
