--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -8,5 +8,29 @@
 	"Sign Up":"Registrate",
 	"forgotpassword":"¿Olvidaste tu clave?",
 	"Register":"Registrar",
-	"forgotMyPassword":"Olvide mi clave"
+	"forgotMyPassword":"Olvide mi clave",
+	"Send":"Enviar",
+	"Message":"Mensaje",
+	"Canvas in the room":"Canvases en la sala",
+	"room": "Sala",
+	"The group": "El grupo",
+	"Users in": "Usuarios miembros",
+	"Rooms": "Salas",
+	"Add User": "Agregar usuario",
+	"Create a New Room": "Crear nueva sala",
+	"Welcome":"Bienvenido/a",
+	"Username":"Nombre de usuario",
+	"Email":"Correo electronico",
+	"Create new group":"Crear nuevo grupo",
+	"Update Information":"Actualizar datos",
+	"My Groups":"Mis grupos",
+	"Fill in the fields you would like to change":"LLena los campos que quieras cambiar",
+	"Insert your new username":"Pon tu nuevo ususario",
+	"Insert your new email":"Pon tu nuevo correo",
+	"Insert your new password":"Pon tu nueva clave",
+	"Insert the URL of the new image":"Pon la URL a tu nueva imagen",
+	"Insert the name of the new group":"Pon el nombre del nuevo grupo",
+	"Insert username of the user to add":"Pon el ususario a agregar",
+	"Will the user be an admin?":"¿Sera administrador?",
+	"Insert room name":"Pon el nombre de la habitación"
 }
